--- a/public/login.html
+++ b/public/login.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar-se</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Registrar-se</h1>
-        <form id="registerForm">
-            <label for="username">Nome:</label>
-            <input type="text" id="username" name="username" required><br><br>
-
+        <h1>Login</h1>
+        <form id="loginForm">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required><br><br>
 
             <label for="password">Senha:</label>
             <input type="password" id="password" name="password" required><br><br>
 
-            <button type="submit">Registrar</button>
+            <button type="submit">Login</button>
             <button type="button" id="backButton">Voltar</button>
         </form>
     </div>
